@@ -3,7 +3,6 @@ package org.eclipse.cargotracker.domain.model.voyage;
 import java.lang.reflect.Field;
 import java.time.LocalDateTime;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -292,8 +291,7 @@ public class SampleVoyages {
     return new Voyage(
         new VoyageNumber(id),
         new Schedule(
-            Collections.singletonList(
-                new CarrierMovement(from, to, LocalDateTime.now(), LocalDateTime.now()))));
+            List.of(new CarrierMovement(from, to, LocalDateTime.now(), LocalDateTime.now()))));
   }
 
   public static List<Voyage> getAll() {
